docs: expand glossary acronym coverage